# tauri-plugin-secure-storage

./: Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
android/: build.gradle.kts  gradle.properties  local.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: KeyStoreException.kt  SecureStoragePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: defenition.ts  index.ts
ios/: Package.swift  README.md
ios/Sources/: KeychainError.swift  SecureStoragePlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: set_synchronize_keychain.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
